--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     db:
         image: mysql:5.7
         container_name: routine_db
+        env_file: ./Database/.env
+        initdb.d:
+          - ./Database/create_table.sql
         environment:
-            MYSQL_ROOT_PASSWORD: "root"
-            MYSQL_PASSWORD: "root"
-            MYSQL_DATABASE: "Routine"
+            TZ: Asia/Seoul
         command:
             - --character-set-server=utf8mb4
             - --collation-server=utf8mb4_unicode_ci
