--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
     db:
         image: mysql:5.7
         container_name: routine_db
-        env_file: ./Database/.env
-        initdb.d:
-          - ./Database/create_table.sql
+        volumes:
+            - ./db/conf.d:/etc/mysql/conf.d
+            - ./db/data:/var/lib/mysql
+            - ./db/initdb.d:/docker-entrypoint-initdb.d
+        env_file: .env
         environment:
             TZ: Asia/Seoul
-        command:
-            - --character-set-server=utf8mb4
-            - --collation-server=utf8mb4_unicode_ci
         ports:
             - 3306:3306
+        restart: always
     apiserver:
         build:
             context: .
@@ -25,3 +25,4 @@ services:
             - 8003:8003
         depends_on:
             - db
+        restart: always
