--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==4.0.3
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.1.0
 mysqlclient==2.1.0
+pycrypto==2.6.1
 PyJWT==1.7.1
 pytz==2022.1
 sqlparse==0.4.2
